[systeminfo] Avoid thing type change as well memory re-allocations
Signed-off-by: Alexander Falkenstern <alexander.falkenstern@gmail.com>